# tdd-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
aidocs/: PRD-initial.md
src/tdd_mcp/: __init__.py  main.py
src/tdd_mcp/domain/: events.py  exceptions.py  session.py
src/tdd_mcp/handlers/: guidance_handlers.py  logging_handlers.py  session_handlers.py  workflow_handlers.py
src/tdd_mcp/repository/: base.py  filesystem.py  memory.py
src/tdd_mcp/utils/: config.py  logging.py
tests/: test_error_handling.py  test_logging_config.py  test_main.py  test_mcp_integration.py
tests/domain/: test_events.py  test_session.py
tests/handlers/: test_guidance_handlers.py  test_session_handlers.py  test_workflow_handlers.py
tests/repository/: test_base.py  test_filesystem.py  test_memory.py
tests/utils/: test_config.py
