[project]
name = "tdd-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that enforces disciplined Test-Driven Development workflows"
readme = "README.md"
authors = [
    { name = "Tin Man", email = "135335469+tinmancoding@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic>=2.0.0",
]

[project.scripts]
tdd-mcp = "tdd_mcp.main:start_server"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
