[project]
name = "tdd-mcp"
version = "0.0.1"
description = "A Model Context Protocol (MCP) server that enforces disciplined Test-Driven Development workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tin Man", email = "135335469+tinmancoding@users.noreply.github.com" }
]
keywords = ["mcp", "tdd", "test-driven-development", "event-sourcing", "testing", "development-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tinmancoding/tdd-mcp"
Repository = "https://github.com/tinmancoding/tdd-mcp"
Issues = "https://github.com/tinmancoding/tdd-mcp/issues"

[project.scripts]
tdd-mcp = "tdd_mcp.main:start_server"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
